--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 services:
   php-apache-environment:
     container_name: php-apache
@@ -6,13 +6,13 @@ services:
       context: ./phpDir
       dockerfile: Dockerfile
     depends_on:
-      - db
+      - db1
     volumes:
       - ./phpDir/src:/var/www/html/
     ports:
-      - 8005:80
-  db:
-    container_name: db
+      - 8006:80
+  db1:
+    container_name: db1
     image: mysql
     restart: always
     environment:
@@ -21,13 +21,13 @@ services:
       MYSQL_USER: lionUser
       MYSQL_PASSWORD: lionPass
     ports:
-      - '9906:3306'
+      - "9907:3306"
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     ports:
-      - '9080:80'
+      - "9081:80"
     restart: always
     environment:
-      PMA_HOST: db
+      PMA_HOST: db1
     depends_on:
-      - db
+      - db1
