project1 css and project3 css edited

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   php-apache-environment:
-    container_name: php-apache
+    container_name: php-apache2
     build:
       context: ./phpDir
       dockerfile: Dockerfile
